<!--
Name                 David Sumpster
Student ID           S1518256
Programme of Study   BSc Computing
-->

<resources>
    <string name="app_name">UK Earthquake Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_stats">Stats</string>
    <string name="title_search">Search</string>
    <string name="title_info">About</string>

    <string name="earthquake_details">Earthquake Details:</string>
    <string name="location">Location:</string>
    <string name="date_time">Date/Time:</string>
    <string name="magnitude">Magnitude:</string>
    <string name="depth_km">Depth (km):</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="magnitude_circle">Magnitude Circle</string>
    <string name="m">M</string>
    <string name="about_general">This application was developed as part of the Mobile Platform Development module at Glasgow Caledonian University.</string>
    <string name="about_legend_title">LEGEND:</string>
    <string name="about_magnitude_high">Magnitude is greater than (or equal to) 2.5</string>
    <string name="about_magnitude_med">Magnitude is less than 2.5 but greater than (or equal to) 1.5</string>
    <string name="about_magnitude_low">Magnitude is less than 1.5</string>
    <string name="about_disclaimer">Contains British Geological Survey materials ©NERC 2019</string>

    <string-array name="stats_array">
        <item>Most Northerly</item>
        <item>Most Easterly</item>
        <item>Most Southerly</item>
        <item>Most Westerly</item>
        <item>Highest Magnitude</item>
        <item>Deepest Depth</item>
        <item>Shallowest Depth</item>
    </string-array>

    <string name="stats_north">Most Northerly Earthquake:</string>
    <string name="stats_east">Most Easterly Earthquake:</string>
    <string name="stats_south">Most Southerly Earthquake</string>
    <string name="stats_west">Most Westerly Earthquake</string>
    <string name="stats_high_m">Highest Magnitude Earthquake:</string>
    <string name="stats_high_d">Deepest Earthquake:</string>
    <string name="stats_low_d">Shallowest Earthquake:</string>
    <string name="matric">Matric: S1518256</string>
</resources>
