<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundDetails"
    tools:context=".EarthquakeDetailsFragment" >

    <TextView
        android:id="@+id/earthquakeDetailsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/earthquake_details"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/earthquakeLocationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/earthquakeLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="12sp" />

    <TextView
        android:id="@+id/earthquakeDateTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/date_time"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/earthquakeDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="12sp" />

    <TextView
        android:id="@+id/earthquakeMagnitudeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/magnitude"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/earthquakeMagnitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="12sp" />

    <TextView
        android:id="@+id/earthquakeDepthLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/depth_km"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/earthquakeDepth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="12sp" />

    <TextView
        android:id="@+id/earthquakeLatitudeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/latitude"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/earthquakeLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="12sp" />

    <TextView
        android:id="@+id/earthquakeLongitudeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/longitude"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/earthquakeLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="12sp" />

</LinearLayout>